<resources>
    <string name="app_name" translatable="false">Chroma_App</string>
    <string name="foreground">Foreground</string>
    <string name="background">Background</string>
    <string name="delete">Delete</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="palette">Palette</string>
    <string name="tolerance">Tolerance</string>
    <string name="contrast">Contrast</string>
    <string name="brightness">Brightness</string>
    <string name="rotation">Rotation</string>
    <string name="saturation">Saturation</string>
    <string name="opacity">Opacity</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="restart">Restart</string>
    <string name="finish" >Finish</string>
    <string name="warmth">Warmth</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose">Choose the image</string>
    <string name="choose_from">Where do you want to take the image from?</string>
    <string name="missing_data">Missing any image!</string>
    <string name="image_saved">Saved image!</string>
    <string name="share_to">Share to...</string>
    <string name="image_not_saved">The image could not be saved!</string>
    <string name="selected">Chroma color</string>
    <string name="info_1">Click on the icons to choose the images that will be used. The main image is the one that will appear above the rest, and must have a background of only one uniform color.</string>
    <string name="info_2">Click on the image to choose which color you want to delete according to the tolerance. You can also choose the color with the sample colors or the HSL method.</string>
    <string name="info_3">Click on the image to be edited and select the effect to be applied. Click on the image and drag your finger across the screen to change the image position or pinch the image to zoom it.</string>
    <string name="choose_title">Choose images</string>
    <string name="ok">Ok</string>
    <string name="chroma_title">Select chroma color</string>
    <string name="edit_title">Edit the images</string>
    <string name="ErrorSomething">Something went wrong</string>
</resources>
