<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#332222"
    tools:context="uroz.cristina.chroma_app.ChooseActivity">

    <Button
        android:id="@+id/previous_button_edit"
        android:layout_width="@dimen/tam_normal"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/previous" />

    <Button
        android:id="@+id/next_button_edit"
        android:layout_width="@dimen/tam_normal"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/next" />

    <Button
        android:id="@+id/foreground_button_edit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/foreground"
        android:layout_alignBaseline="@+id/background_button_edit"
        android:layout_alignBottom="@+id/background_button_edit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="30dp" />

    <Button
        android:id="@+id/background_button_edit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/next_button_edit"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/background" />

    <ImageView
        android:id="@+id/ima_mixed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/selection_bar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/foreground_button_edit"
        app:srcCompat="@android:drawable/btn_radio" />

    <SeekBar
        android:id="@+id/selection_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/contrast_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/contrast_button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rotation_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/contrast" />

    <Button
        android:id="@+id/brightness_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/saturation_button"
        android:layout_centerHorizontal="true"
        android:text="@string/brightness" />

    <Button
        android:id="@+id/temperature_button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/opacity_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/warmth" />

    <Button
        android:id="@+id/rotation_button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/contrast_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/contrast_button"
        android:text="@string/rotation" />

    <Button
        android:id="@+id/saturation_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/brightness_button"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/brightness_button"
        android:text="@string/saturation" />

    <Button
        android:id="@+id/opacity_button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/opacity" />

</RelativeLayout>

