<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="uroz.cristina.chroma_app.ChooseActivity">

    <Button
        android:id="@+id/previous_button_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="98dp"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
        android:text="@string/share" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/share_button"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/restart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/share_button"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/share_button"
        android:layout_marginBottom="22dp"
        android:text="@string/restart" />

    <Button
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/restart_button"
        android:layout_alignEnd="@+id/save_button"
        android:layout_alignRight="@+id/save_button"
        android:text="@string/finish" />

    <EditText
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/previous_button_share"
        android:ems="10"
        android:inputType="textPersonName" />

</RelativeLayout>
