<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="uroz.cristina.chroma_app.ChooseActivity">

    <Button
        android:id="@+id/previous_button_chroma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/next_button_chroma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tolerance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tolerance_bar"
        android:layout_alignLeft="@+id/tolerance_bar"
        android:layout_alignStart="@+id/tolerance_bar"
        android:layout_marginBottom="11dp"
        android:text="@string/tolerance" />

    <SeekBar
        android:id="@+id/tolerance_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/hsl_button"
        android:layout_alignEnd="@+id/next_button_chroma"
        android:layout_alignLeft="@+id/previous_button_chroma"
        android:layout_alignRight="@+id/next_button_chroma"
        android:layout_alignStart="@+id/previous_button_chroma"
        android:layout_marginBottom="26dp" />

    <Button
        android:id="@+id/hsl_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:text="HSL"
        android:textSize="14sp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/tolerance_text"
        android:layout_toEndOf="@+id/tolerance_text"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp" />

    <Button
        android:id="@+id/palette_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hsl_button"
        android:layout_alignBottom="@+id/hsl_button"
        android:layout_alignEnd="@+id/next_button_chroma"
        android:layout_alignRight="@+id/next_button_chroma"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:text="@string/palette"
        android:textSize="14sp" />

</RelativeLayout>