<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uroz.cristina.chroma_app.ChooseActivity">

    <Button
        android:id="@+id/next_button_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/foreground_add"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/next" />

    <TextView
        android:id="@+id/foreground_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="47dp"
        android:text="@string/foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/background_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/foreground_text"
        android:layout_alignStart="@+id/foreground_text"
        android:layout_below="@+id/foreground_text"
        android:layout_marginTop="207dp"
        android:text="@string/background" />

    <Button
        android:id="@+id/foreground_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/foreground_text"
        android:layout_alignStart="@+id/foreground_text"
        android:layout_below="@+id/foreground_text"
        android:layout_marginTop="24dp"
        android:text="+"
        android:textSize="24sp" />

    <Button
        android:id="@+id/background_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="+"
        android:textSize="24sp"
        android:layout_below="@+id/foreground_delete"
        android:layout_alignLeft="@+id/background_text"
        android:layout_alignStart="@+id/background_text" />

    <Button
        android:id="@+id/foreground_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_marginBottom="24dp"
        android:layout_alignBottom="@+id/background_text"
        android:layout_alignLeft="@+id/next_button_choose"
        android:layout_alignStart="@+id/next_button_choose" />

    <Button
        android:id="@+id/background_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/delete"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/foreground_delete"
        android:layout_alignStart="@+id/foreground_delete" />

</RelativeLayout>
