<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#332222"
    tools:context="uroz.cristina.chroma_app.ChooseActivity">

    <Button
        android:id="@+id/previous_button_chroma"
        android:layout_width="@dimen/tam_normal"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/previous" />

    <Button
        android:id="@+id/next_button_chroma"
        android:layout_width="@dimen/tam_normal"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/next" />




    <TextView
        android:id="@+id/tolerance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/tolerance"
        android:textColor="#ffffff"
        android:layout_above="@+id/tolerance_bar"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:id="@+id/tolerance_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/hsl_button"
        android:layout_alignEnd="@+id/next_button_chroma"
        android:layout_alignLeft="@+id/previous_button_chroma"
        android:layout_alignRight="@+id/next_button_chroma"
        android:layout_alignStart="@+id/previous_button_chroma"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/hsl_button"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/previous_button_chroma"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/previous_button_chroma"
        android:layout_marginLeft="70dp"
        android:layout_marginStart="70dp"
        android:layout_toEndOf="@+id/tolerance_text"
        android:layout_toRightOf="@+id/tolerance_text"

        android:text="HSL"
        android:textSize="14sp" />

    <Button
        android:id="@+id/palette_button"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hsl_button"
        android:layout_alignBottom="@+id/hsl_button"
        android:layout_alignEnd="@+id/next_button_chroma"
        android:layout_alignRight="@+id/next_button_chroma"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:text="@string/palette"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/color_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/ima_chroma"
        android:layout_toLeftOf="@+id/palette_button"
        android:layout_toStartOf="@+id/palette_button" />

    <ImageView
        android:id="@+id/ima_chroma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tolerance_text"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/previous_button_chroma"
        android:layout_marginTop="10dp"
        app:srcCompat="@android:drawable/screen_background_light_transparent" />


    <ImageView
        android:id="@+id/ima_fore2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tolerance_text"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/previous_button_chroma"
        android:layout_marginTop="10dp"
        app:srcCompat="@android:drawable/screen_background_light_transparent" />

</RelativeLayout>